Connect view and viewModel

--- a/try_hilt/app/src/main/res/layout/activity_main.xml
+++ b/try_hilt/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="please input the id here"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/check_id_button"
         app:layout_constraintStart_toStartOf="parent" />
