--- a/try_hilt/app/src/main/res/layout/activity_main.xml
+++ b/try_hilt/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="여기에 내용이 표시가 됩니다."
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
